Extracting services from panels - 7